// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de Componente GifGrid Deberia implementar valores a nuestro array imagenes 1`] = `
<Fragment>
  <h2>
    Hola
  </h2>
  <p />
  <div
    className="cardGrid "
  >
    <GifItem
      id="abc"
      key="abc"
      title="hola"
      url="https://hola.com"
    />
  </div>
</Fragment>
`;

exports[`Prueba de Componente GifGrid Deberia pasar el componente 1`] = `
<Fragment>
  <h2>
    Hola
  </h2>
  <p>
    Cargando
  </p>
  <div
    className="cardGrid "
  />
</Fragment>
`;
